[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "msibi"
version = "0.2.0"
description = "Deriving coarse-grain potentials from multiple target state points."
readme = "README.md"
authors = [
  {name = "Tim Moore", email = "mtimc@umich.edu"},
  {name = "Christopher Klein", email = "christoph.klein@vanderbilt.edu"},
]
maintainers = [
  {name = "Chris Jones", email = "c.jones_1@hw.ac.uk"},
]
license= {text = "MIT"}
classifiers=[
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
urls = {Homepage = "https://github.com/mosdef-hub/msibi"}
requires-python = ">=3.10"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
msibi = ['"utils/**"']
